--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "grunt": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/themax6600/exercicio02-3ano#readme",
   "description": "",
   "devDependencies": {
-    "sass": "^1.83.4"
+    "grunt": "^1.6.1",
+    "sass": "^1.85.0"
   }
 }
